--- a/src/estilo.css
+++ b/src/estilo.css
@@ -13,7 +13,7 @@ body {
 
 div#column-content{
   margin: 0;
-  float: none;
+	float: none;
 }
 
 div#content {
@@ -22,10 +22,17 @@ div#content {
 }
 
 #navegador {
-    position: fixed;
-    top:0;
-    left:0;
-    right: 0;
-    background-color: rgba(0,0,0,0.5);
-    z-index: 100;
+	position: fixed;
+	top:0;
+	left:0;
+	right: 0;
+	background-color: rgba(243, 243, 243, 0.95);
+	z-index: 100;
+	padding: 3px;
+	border-bottom: 1px solid rgb(155, 155, 155);
+	box-shadow: 0px 0px 5px #888;
+}
+
+.derecha {
+	float: right;
 }
