--- a/src/estilo.css
+++ b/src/estilo.css
@@ -36,3 +36,26 @@ div#content {
 .derecha {
 	float: right;
 }
+
+
+.cuerpo-buscador {
+  margin: 1em;
+  margin-top: 1.5em;
+  font-family: sans-serif;
+	font-size: 17px;
+}
+
+.cuerpo-buscador input {
+  height: 34px;
+	border: 1px solid rgb(155, 155, 155);
+	border-radius: 4px;
+	padding-left: 5px;
+}
+
+.invisible {
+  display: none;
+}
+
+.resultados {
+  margin-top: 1.5em;
+}
