--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -77,3 +77,36 @@ div#content {
 	margin-bottom: 10px;
 	padding: 12px;
 }
+
+
+.isa_note, .isa_tip, .isa_warning, .isa_important {
+    border: 1px solid;
+    margin: 10px 0px;
+    padding:15px 10px 15px 50px;
+    background-repeat: no-repeat;
+    background-position: 10px center;-moz-border-radius:.5em;
+    -webkit-border-radius:.5em;
+    border-radius:.5em;
+}
+
+.isa_note {
+    color: #00529B;
+    background-color: #BDE5F8;
+    background-image: url('../../documentacion/images/b/b3/Info.png');
+}
+
+.isa_tip {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+    background-image:url('../../documentacion/images/e/ef/Success.png');
+}
+.isa_important {
+    color: #9F6000;
+    background-color: #FEEFB3;
+    background-image: url('../../documentacion/images/c/cb/Warning.png');
+}
+.isa_warning {
+    color: #D8000C;
+    background-color: #FFBABA;
+    background-image: url('../../documentacion/images/4/49/Error.png');
+}
