--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -130,3 +130,13 @@ div#content {
 #zoom {
   vertical-align: middle;
 }
+
+
+#navegador {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
